--- a/Makefile.deploy-common-targets
+++ b/Makefile.deploy-common-targets
@@ -25,7 +25,7 @@ git-tag: ##creates new git tag and pushes to github
 	git add .
 	git commit -m "[skip ci] bumped version to $(VERSION)" ;
 	git tag $(VERSION)
-	@ if [ -n "$(shell git remote -v)" ] ; then git push --tags ; else echo 'no remote to push tags to' ; fi
+	#@ if [ -n "$(shell git remote -v)" ] ; then git push --tags ; else echo 'no remote to push tags to' ; fi
 
 release: update-version build/docker-build build/docker-deploy git-tag #Create and push git tag, build new docker image, push to dockerhub
 
